--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
             <li>Tile Work</li>
         </ul>
 
-        <h2>If you are interested on something not listed, send us an email! Our expertise doesn't stop here!</h2>
+        <h2>If you are interested in something not listed, send us an email! Our expertise doesn't stop here!</h2>
         <h3 class="navButton" id="contact2">Contact Us!</h3>
 
     </div>
