--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
             if (window.innerWidth <= 426) {
 
-                $('#pageContentContainer').css('height', (window.innerHeight - 161) + 'px');
+                $('#pageContentContainer').css('height', (window.innerHeight - 169) + 'px');
 
             } else {
-                $('#pageContentContainer').css('height', (window.innerHeight - 89) + 'px');
+                $('#pageContentContainer').css('height', (window.innerHeight - 97) + 'px');
             }
             //functionality for the button to open up the users email service
             $("#contactSend").on("click", function () {
@@ -98,10 +98,10 @@
 
                 if (window.innerWidth <= 426) {
 
-                    $('#pageContentContainer').css('height', (window.innerHeight - 161) + 'px');
+                    $('#pageContentContainer').css('height', (window.innerHeight - 166) + 'px');
 
                 } else {
-                    $('#pageContentContainer').css('height', (window.innerHeight - 89) + 'px');
+                    $('#pageContentContainer').css('height', (window.innerHeight - 97) + 'px');
                 }
 
             });
@@ -196,7 +196,7 @@ Start of Contact Modal
 
                 <p><b>Miguel's Mobile:</b> 803-981-3423</p>
                 <p><b>Jacob's Mobile:</b> 803-417-2997</p>
-                <p><b>Email:</b> jacob@espobrosconstruction.com</p>
+                <p><b>Email:</b> jespinoza932@gmail.com</p>
 
             </div>
 
