--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Start of Contact Modal
 
                 <p><b>Miguel's Mobile:</b> 803-981-3423</p>
                 <p><b>Jacob's Mobile:</b> 803-417-2997</p>
-                <p><b>Email:</b> jespinoza932@gmail.com</p>
+                <p><b>Email:</b> jacob@espobrosconstruction.com</p>
 
             </div>
 
